# Perse_Controller-Firmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.basic  sdkconfig.missionctrl
bootloader_components/init/: hooks.c
examples/: HWTest.cpp
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
main/src/: Pins.hpp
main/src/Devices/: AW9523.cpp  AW9523.h  Backlight.cpp  Backlight.h  Battery.cpp  Battery.h  Display.cpp  Display.h  Encoders.cpp  Encoders.h  Input.cpp  Input.h  Joystick.cpp  Joystick.h  LEDController.cpp  LEDController.h  Potentiometers.cpp  Potentiometers.h  SingleExpanderLED.cpp  SingleExpanderLED.h  SingleLED.cpp  SingleLED.h  SinglePwmLED.cpp  SinglePwmLED.h
main/src/GIF/: GIF.cpp  GIF.h  GIFSprite.cpp  GIFSprite.h  gifdec.cpp  gifdec.h
main/src/JigHWTest/: JigHWTest.cpp  JigHWTest.h  SPIFFSChecksum.hpp
main/src/LV_Interface/: FSLVGL.cpp  InputLVGL.cpp  InputLVGL.h  LVGL.cpp  LVGL.h  LVStyle.h
main/src/LV_Interface/Theme/: theme.h
main/src/Periph/: ADC.cpp  ADC.h  SPIFFS.cpp  SPIFFS.h  Timer.cpp  WiFiSTA.cpp  WiFiSTA.h
main/src/Screens/: DriveScreen.cpp  DriveScreen.h  IntroScreen.cpp  IntroScreen.h  PairScreen.cpp  PairScreen.h
main/src/Screens/DriveScreen/: DriveScreen.cpp  DriveScreen.h
main/src/Screens/DriveScreen/Modules/: AltPressModule.cpp  AltPressModule.h  CO2Module.cpp  CO2Module.h  DummyModule.cpp  DummyModule.h  GyroModule.cpp  GyroModule.h  LEDModule.cpp  LEDModule.h  ModuleElement.cpp  ModuleElement.h  MotionModule.cpp  MotionModule.h  PhotoresModule.cpp  PhotoresModule.h  RGBModule.cpp  RGBModule.h  TempHumModule.cpp  TempHumModule.h  UnknownModule.cpp  UnkownModule.h
main/src/Screens/Pair/: PairScreen.cpp  ShutdownScreen.cpp  ShutdownScreen.h
main/src/Services/: ADCReader.cpp  BatteryLowService.cpp  BatteryLowService.h  Comm.cpp  Comm.h  Feed.cpp  Feed.h  InactivityService.cpp  InactivityService.h  LED.cpp  LED.h  LEDService.cpp  LEDService.h  PairService.cpp  PairService.h  RoverState.cpp  RoverState.h  Settings.h  StateMachine.cpp  StateMachine.h  TCPClient.cpp  TCPClient.h  UDPListener.cpp
main/src/States/: DriveState.cpp  DriveState.h  PairState.cpp  PairState.h
main/src/UISystem/: AnimElement.cpp  AnimElement.h  Element.cpp  Element.h  ElementContainer.cpp  ElementContainer.h  ImageElement.cpp  ImageElement.h  IntroScreen.cpp  IntroScreen.h  LabelElement.cpp  LabelElement.h  Modal.cpp  Modal.h  Screen.cpp  Screen.h  UIThread.cpp  UIThread.h
main/src/UISystem/IntroScreen/: IntroScreen.cpp  IntroScreen.h
main/src/Util/: Events.cpp  Events.h  HWVersion.h  LEDBlinkFunction.cpp  LEDBlinkFunction.h  LEDBreatheFunction.cpp  LEDBreatheFunction.h  LEDFunction.h  Queue.h  Services.h  Threaded.cpp  Threaded.h  stdafx.h
spiffs_MissionCtrl/: logo-artemis.raw  logo-cm.raw  logo-space.raw
spiffs_MissionCtrl/battery/: shutdown.raw
spiffs_MissionCtrl/drive/: arrow-down-active.raw  arrow-right-active.raw  arrow-right.raw  arrow-up-active.raw  camera-feed-text.raw  connected.raw  mute.raw  panicText.raw  quality-bar.raw  quality-line.raw  signal2.raw  signal3.raw
spiffs_MissionCtrl/intro/: logo-geek.raw  logo-space.raw
spiffs_MissionCtrl/pair/: error.raw  frame.raw  textDC.raw  textPair.raw
spiffs_image/: cross.raw  logo-geek.raw
spiffs_image/drive/: arrow-down.raw  arrow-left-active.raw  arrow-left.raw  arrow-up.raw  signal1.raw  signal4.raw  signal5.raw
spiffs_image/intro/: logo-cm.raw  logo-perse.raw
spiffs_image/pair/: controller_rover.raw  textFail.raw
